Closed Bug 377281 Opened 17 years ago Closed 17 years ago

Changing bookmark properties sets incorrect keyword_id value in database

Categories

(Firefox :: Bookmarks & History, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 3 alpha5

People

(Reporter: john.p.baker, Assigned: moco)

Details

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a4pre) Gecko/20070410 Minefield/3.0a4pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a4pre) Gecko/20070410 Minefield/3.0a4pre

Changing Bookmark properties stores an incorrect value (42949672960) in the keyword_id field of the moz_bookmarks table instead of <null>

Reproducible: Always

Steps to Reproduce:
1. Select a bookmark from the sidebar
2. Choose Properties - leave keyword empty
3. Save Changes
Actual Results:  
Field gets changed to 42949672960

Expected Results:  
Field left as <null>

I haven't spent a long time with the code, but my first impression is that it can reach http://lxr.mozilla.org/seamonkey/source/toolkit/components/places/src/nsNavBookmarks.cpp#2200 without a valid value in keywordId (ie when kwd.isEmpty() )
Attached image Visit Count 4294967294
maybe its another bug but the result looks the same

Steps to Reproduce:
1.create new profile
2.Add bookmark to a new folder
3.open bookmarks manager
4.copy & paste the new folder into another folder
5.UNDO the paste (BUG: you can't REDO)
6.paste again
7.UNDO again >>>>>>> the Visit Count corrupted

i'v noticed that if i repeat step 6 - 7 more times the corrupted visit Count reducing each time by the amount of actual visit count that the paste folder had
confirming.

we have a bug about that exact problem with the wd.isEmpty() code, great catch.
Status: UNCONFIRMED → NEW
Ever confirmed: true
the other bug is bug #380951, working on the fix now.
Assignee: nobody → sspitzer
Attachment #265473 - Flags: review?(dietrich)
onemen.one's issue in comment #1 (and the undo / redo issue bug) are something else.

I'll spin them off.
Attachment #265473 - Flags: review?(dietrich) → review+
Target Milestone: --- → Firefox 3 alpha5
fixed.

Checking in src/nsNavBookmarks.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavBookmarks.cpp,v  <--  nsNavB
ookmarks.cpp
new revision: 1.94; previous revision: 1.93
done

I'll log onemen.one's spin off bugs next.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
> maybe its another bug but the result looks the same

see bug #381397

> 5.UNDO the paste (BUG: you can't REDO)

see bug #381398
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".

In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body   contains   places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.

Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.

Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: