fix for bug #377281: Changing bookmark properties sets incorrect keyword_id value in databaser=dietrich